<resources>
    <string name="app_name">Smart Society</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_in">Sign in</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="family_member_of_tenant">Family member of Tenant</string>
    <string name="tenant">Tenant</string>
    <string name="owner">Owner</string>
    <string name="family_member">Family Member</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>