<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:touchscreenBlocksFocus="true">


    <RadioGroup
        android:id="@+id/typeOfMember"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/styles"
        android:paddingStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/_dynamic">

        <RadioButton
            android:id="@+id/owner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/owner"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/family_member"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/family_member"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/tenant"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/tenant"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/fam_member_tenant"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/family_member_of_tenant"
            tools:ignore="TouchTargetSizeCheck" />
    </RadioGroup>

    <ListView
        android:id="@+id/_dynamic"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/styles"
        android:minHeight="48dp"
        android:paddingStart="15dp"
        app:layout_constraintBottom_toTopOf="@+id/email1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typeOfMember"
        app:layout_constraintVertical_bias="0.341" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/styles"
        android:foreground="@drawable/uname"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/user_logo" />

    <ListView
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/styles"
        android:cacheColorHint="#00FFFFFF"
        android:minHeight="48dp"
        android:paddingStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mobileno"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/name"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="Name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="15dp"
        android:background="@drawable/styles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/mobileno"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/mobile_no"
        android:inputType="phone"
        android:minHeight="48dp"
        android:paddingStart="15dp"
        android:background="@drawable/styles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/email1"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/styles"
        android:ems="10"
        android:hint="Email ID"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        app:layout_constraintBottom_toTopOf="@+id/Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/styles"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        app:layout_constraintBottom_toTopOf="@+id/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="SUBMIT"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>